Bug 417259 - Amarok fails to load lyrics from lyrics.wikia.com
Summary: Amarok fails to load lyrics from lyrics.wikia.com
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Context View/Lyrics (other bugs)
Version First Reported In: 2.9.0
Platform: Other Linux
: NOR normal
Target Milestone: kf5
Assignee: Pedro de Carvalho Gomes
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-07 10:39 UTC by Pedro de Carvalho Gomes
Modified: 2020-02-25 21:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pedro de Carvalho Gomes 2020-02-07 10:39:09 UTC
Amarok does not load lyrics from lyrics.wikia.com since the domain now is redirected to lyrics.fandom.com

STEPS TO REPRODUCE
1. enable the Lyrics applet
2. play a song which hasn't the lyrics cached

OBSERVED RESULT
The lyrics are not loaded. A simple log inspection shows the reason: the applet doesn't handle the HTTP redirection to lyrics.fandom.com (and to HTTPS schema).

EXPECTED RESULT
Lyrics are loaded inside the applet


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 19.10
(available in About System)
KDE Plasma Version: 5.16.4
KDE Frameworks Version: 5.62.0
Qt Version: 5.12.4

ADDITIONAL INFORMATION
I have already implemented the fix to this. I need someone to assist me on the steps to push it to the main branch
Comment 1 Myriam Schweingruber 2020-02-11 19:59:13 UTC
Please join the amarok-devel@kde.org mailing list for this, and submit your fix to phabricator.kde.org, subscribing the group "amarok".

FWIW: we do no work on the Qt4 branch anymore since quite some time, master is using Qt5 and KDE frameworks5 now.
Comment 2 Pedro de Carvalho Gomes 2020-02-13 14:57:41 UTC
Thank you Myriam for the reply. I have created a review request (D27369) for this bug, and others
Comment 3 Heiko Becker 2020-02-25 21:43:02 UTC
Git commit 7f966e2a46c92eeec2991feec30fb061c41c0b67 by Heiko Becker, on behalf of Pedro Gomes.
Committed on 25/02/2020 at 21:41.
Pushed by heikobecker into branch 'master'.

Fix loading of lyrics from lyrics.wikia.com

Summary:
Fix error where Amarok failed to load lyrics from lyrics.wikia.com because the domain was being redirected to lyrics.fandom.com.

The fix does two things:

  - update the base API Url to the redirected domain lyrics.fandom.com, thus skipping the redirection
  - makes LyricsManager react to possible future redirections

Reviewers: #amarok, amarok-devel, heikobecker

Reviewed By: #amarok, heikobecker

Subscribers: #amarok, pgomes, amarok-devel

Differential Revision: https://phabricator.kde.org/D27369

M  +18   -1    src/lyrics/LyricsManager.cpp
M  +3    -0    src/lyrics/LyricsManager.h

https://commits.kde.org/amarok/7f966e2a46c92eeec2991feec30fb061c41c0b67