Fix loading of lyrics from lyrics.wikia.com

Summary:
Fix error where Amarok failed to load lyrics from lyrics.wikia.com because the domain was being redirected to lyrics.fandom.com.

The fix does two things:

  - update the base API Url to the redirected domain lyrics.fandom.com, thus skipping the redirection
  - makes LyricsManager react to possible future redirections

Reviewers: #amarok, amarok-devel, heikobecker

Reviewed By: #amarok, heikobecker

Subscribers: #amarok, pgomes, amarok-devel

BUG: 417259

Differential Revision: https://phabricator.kde.org/D27369